// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RpgContainer applies background image based on bgImg prop: RpgContainer Background Image 1`] = `
<body>
  <div>
    <div
      class="rpgui-container container framed"
      style="background-image: url(test.png); background-repeat: no-repeat; background-size: cover; background-position: bottom;"
    />
  </div>
</body>
`;

exports[`RpgContainer renders correctly: RpgContainer 1`] = `
<body>
  <div>
    <div
      class="rpgui-container container framed"
    />
  </div>
</body>
`;
